--- a/RetailOrdersAnalysis.ipynb
+++ b/RetailOrdersAnalysis.ipynb
@@ -617,7 +617,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\GAUTAM GUPTA\\AppData\\Local\\Temp\\ipykernel_13436\\3699944821.py:1: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "C:\\Users\\ADITYA GUPTA\\AppData\\Local\\Temp\\ipykernel_13436\\3699944821.py:1: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
       "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
       "\n",
       "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
@@ -1244,7 +1244,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\GAUTAM GUPTA\\AppData\\Local\\Temp\\ipykernel_13436\\3609944797.py:3: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "C:\\Users\\ADITYA GUPTA\\AppData\\Local\\Temp\\ipykernel_13436\\3609944797.py:3: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
       "  d = pd.read_sql(query, con)  # Load directly into a DataFrame\n"
      ]
     },
@@ -2745,7 +2745,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\GAUTAM GUPTA\\AppData\\Local\\Temp\\ipykernel_13436\\2665857562.py:2: FutureWarning: \n",
+      "C:\\Users\\ADITYA GUPTA\\AppData\\Local\\Temp\\ipykernel_13436\\2665857562.py:2: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
