--- a/RetailOrdersAnalysis.ipynb
+++ b/RetailOrdersAnalysis.ipynb
@@ -34,7 +34,7 @@
     "con = mysql.connector.connect(\n",
     "    host='localhost',\n",
     "    user='root',\n",
-    "    password='gautam4300',\n",
+    "    password='aditya4300',\n",
     ")\n",
     "cur = con.cursor()\n",
     "q1=\"CREATE DATABASE IF NOT EXISTS order_analysis\"\n",
